--- a/pom.xml
+++ b/pom.xml
@@ -68,19 +68,10 @@
             <version>0.13.0</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-jackson</artifactId>
-            <version>0.13.0</version>
-            <scope>runtime</scope>
-        </dependency>
+        <!-- removed jjwt-jackson to avoid bringing Jackson into the runtime; rely on jjwt-impl only -->
 
     <!-- Support Java 8 Date/Time (LocalDateTime) in Jackson-based providers -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.14.2</version>
-        </dependency>
+        <!-- Using JSON-B (Yasson) provided by Jakarta EE; no jackson jsr310 dependency -->
     </dependencies>
 
     <build>
