--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,17 @@
             <version>0.13.0</version>
             <scope>runtime</scope>
         </dependency>
-        <!-- removed jjwt-jackson to avoid bringing Jackson into the runtime; rely on jjwt-impl only -->
-
-    <!-- Support Java 8 Date/Time (LocalDateTime) in Jackson-based providers -->
-        <!-- Using JSON-B (Yasson) provided by Jakarta EE; no jackson jsr310 dependency -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.13.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.13.5</version>
+        </dependency>
     </dependencies>
 
     <build>
