--- a/research-center-client/package.json
+++ b/research-center-client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
